# Crypto_Quant_Pump

./: .env.example  .gitignore  NEXT_SESSION_PROMPT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  v14_result.pkl  v15_result.pkl  v16_3hdown.pkl  v17_24_25.pkl  v18_tighten.pkl  v19_is_25_26.pkl  v19_result.pkl  v19_trades.csv  v2.0_INS_2025_2026.pkl  v2.0_OOS_2024_2025.pkl  v2.0_cache_ON_OOS.pkl  v2.0_fast_INS.pkl  v2.0_fast_OOS.pkl  v2.0_trades.csv  v2.1_OOS_2024_2025.pkl  v2.2_OOS_2024_2025.pkl  v2.3_OOS_2024_2025.pkl  v2.4_OOS_2024_2025.pkl  v20_INS_2025_2026.pkl  v20_OOS_2024_2025.pkl  v22_INS_2025_2026.pkl  v22_OOS_2024_2025.pkl  v23_INS_2025_2026.pkl  v23_OOS_2024_2025.pkl  v24_INS_2025_2026.pkl  v24_OOS_2024_2025.pkl  v26_INS_2025_2026.pkl  v26_OOS_2024_2025.pkl  v27_OOS_2024_2025.pkl  v28_OOS_2024_2025.pkl  v3_full_result.pkl  v7_detail.pkl  v7_final.pkl  (+2 more)
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  (+1 more)
configs/: binance_mvp.yaml  binance_mvp_plus_wave1.yaml  binanceus_mvp.yaml  candidate_combo_two_stage_probe25_weak50.yaml  candidate_hot_vr5_warm_a_ema30.yaml  default.yaml  futures_1x.yaml  legacy_baseline_hot_vr5_warm_a_ema30.yaml  main.yaml  mvp.yaml  v1.yaml  v1_pg.yaml
docs/: strategy_flow.md  vps_deployment.md
scripts/: diagnose_run.py  start_paper_stack.sh
tests/: conftest.py  test_backtest_and_execution.py  test_config.py  test_data_sync.py  test_factors.py  test_futures_analysis.py  test_paper_cycle.py  test_pipeline.py  test_reporting.py  test_risk.py  test_storage_schema.py  test_universe.py  test_universe_service.py
(+52 files in other folders)
